...
    <string name="retry">Try Again</string>
    <string name="tambahkan_lokasi_opsional">Add My Location</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="latitude_label">Latitude: %1$s</string>
    <string name="longitude_label">Longitude: %1$s</string>
    <string name="logout_confirmation">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


</resources>

