<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_upload"
        android:title="@string/upload"
        android:icon="@drawable/ic_upload"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/maps"
        android:icon="@drawable/ic_maps"
        android:title="@string/title_activity_maps"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"
        app:showAsAction="ifRoom"/>

</menu>